--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -25,13 +25,11 @@
 	transition: all .3s;
 }
 header{
-	min-height: 99vh;
-	// position: relative;
+	min-height: 94vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	// flex-direction: column;
 	margin-bottom: 0;
 }
 
@@ -57,4 +55,10 @@ header{
 	width: 100%;
 	text-transform: uppercase;
 	font-weight: 700;
+}
+
+@media only screen and (min-width: 768px){
+	header{
+		min-height: 99vh;
+	}
 }
