Nav Active Class, Responsive

--- a/scss/__aboutme.scss
+++ b/scss/__aboutme.scss
@@ -1,10 +1,10 @@
-.about-me{
+section.about-me{
 	position: relative;
 	min-height: 99vh;
 	margin-top: 0;
 	background-color: $color-primary;
 	color: white;
-	padding-bottom: 3.5rem;
+	padding-bottom: 6.5rem;
 	
 	p{
 		line-height: 2rem;
