--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "__variables";
 @import "__global";
+@import "__animate";
 @import "__header";
 @import "__aboutme";
 @import "__portfolio";
