--- a/scss/__footer.scss
+++ b/scss/__footer.scss
@@ -2,6 +2,8 @@ footer{
 	.container{
 		display: flex;
 		padding: 10px 0px;
+		flex-wrap: wrap;
+		justify-content: center;
 		h2{
 			text-transform: uppercase;
 			font-weight: 700;
