--- a/scss/__global.scss
+++ b/scss/__global.scss
@@ -1,5 +1,6 @@
 :root{
-font-size: 14px;
+	font-size: 14px;
+	scroll-behavior: smooth;
 }
 
 @media only screen and (min-width: 768px){
@@ -25,8 +26,4 @@ section{
 		font-size: 1.8rem;
 		width: 100%;
 	}
-}
-
-hr{
-
 }
