--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -56,7 +56,12 @@ header{
 	width: 100%;
 	text-transform: uppercase;
 	font-weight: 700;
+	a:any-link{
+		color: black;
+		text-decoration: none;
+	}
 }
+
 
 @media only screen and (min-width: 768px){
 	header{
