--- a/scss/__header.scss
+++ b/scss/__header.scss
@@ -1,10 +1,15 @@
 .navbar{
+	transition: box-shadow .5s;
 	background-color: $color-white;
 	&__logo{
 		font-family: 'Knewave', cursive;
 		font-size: 2rem;
 		color: $color-primary;
 		&:hover, &:focus{
+			// text-decoration: none;
+		}
+		&:any-link{
+			color: $color-primary;
 			text-decoration: none;
 		}
 	}
