--- a/scss/__portfolio.scss
+++ b/scss/__portfolio.scss
@@ -23,10 +23,10 @@
 	margin: 10px;
 	object-fit: none;
 	border-radius: 5px;
-	// border: 1px solid $color-primary;
+	border: 1px solid $color-white;
 	transition: all .3s;
 	&:hover{
-		box-shadow: 0 0 20px grey;
+		box-shadow: 0px 0px 10px $color-primary;
 		transform: scale(1.05);
 	}
 	&:active{
