--- a/scss/__footer.scss
+++ b/scss/__footer.scss
@@ -53,5 +53,5 @@ footer{
 			}
 		}
 	}
-	background-color: $color-primary;
+	background-image: linear-gradient($color-primary, darken($color-primary,10));
 }
