--- a/scss/__aboutme.scss
+++ b/scss/__aboutme.scss
@@ -2,7 +2,7 @@ section.about-me{
 	position: relative;
 	min-height: 99vh;
 	margin-top: 0;
-	background-color: $color-primary;
+	background-image: linear-gradient($color-primary, lighten($color-primary,10));
 	color: white;
 	padding-bottom: 6.5rem;
 	
@@ -18,5 +18,6 @@ section.about-me{
 		height: auto;
 		border-radius: 50%;
 		border: 1px solid $color-white;
+		box-shadow: 0 0 10px $color-white;
 	}
 }
