--- a/scss/__contact.scss
+++ b/scss/__contact.scss
@@ -1,11 +1,9 @@
-$base: $color-primary;
 $text: $color-black;
 $invalid: #E91E63;
 $width: auto;
 $cubic: cubic-bezier(.64,.09,.08,1);
 
 .contact{
-	// padding-bottom: 40px;
 	padding-bottom: 2.5rem;
 	background-color: $color-primary;
 	position: relative;
@@ -49,8 +47,8 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 		display: block;
 		border: none;
 		padding: 20px 0 10px;
-		border-bottom: solid 1px $base;
-		background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $base 4%);
+		border-bottom: solid 1px $color-primary;
+		background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $color-primary 4%);
 		background-position: -$width 0;
 		background-size: $width 100%;
 		background-repeat: no-repeat;
@@ -58,7 +56,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 		resize: none;
 		overflow: hidden; 
 		&:focus::-webkit-input-placeholder {
-		  color: $base;
+		  color: $color-primary;
 		}  
 		&:focus, 
 		&:valid {
@@ -75,8 +73,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 	  }
 	  
 	  input[type="email"] {
-		background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $base 4%);
-		// background-position: -400px 0;
+		background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $color-primary 4%);
 		background-repeat: no-repeat;
 		transition: border-bottom 0.3s ease, background 0.3s ease;
 		&~span.validation-text {
@@ -87,7 +84,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 		  width: $width;
 		  margin-left: 25px;
 		  margin-top:-5px;
-		  color: white;
+		  color: $color-white;
 		  transition: color 0.3s ease-in-out;
 		}
 		&:not([value=""]) {
@@ -98,7 +95,7 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 			opacity: 1;
 		  }
 		  &:focus::-webkit-input-placeholder {
-			color: $base;
+			color: $color-primary;
 		  }
 		  &:focus:not(:valid)::-webkit-input-placeholder {
 			color: $invalid;
@@ -138,12 +135,12 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 		transition: transform 0.2s $cubic,
 		   box-shadow 0.2s $cubic;
 		border: none;
-		background: $base;
+		background: $color-primary;
 		cursor: pointer;
 		border-radius: 3px;
 		padding: 6px;
 		width: $width;
-		color: white;
+		color: $color-white;
 		margin: 30px 0 0 25px;
 		box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2);
 		&:hover { 
@@ -174,82 +171,8 @@ $cubic: cubic-bezier(.64,.09,.08,1);
 		  }
 		  
 		  input[type="email"] {
-			background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $base 4%);
-			background-position: -400px 0;
-			background-repeat: no-repeat;
-			transition: border-bottom 0.3s ease, background 0.3s ease;
-			&~span.validation-text {
-			  position: absolute;
-			  visibility: hidden;
-			  font-family: 'roboto', sans-serif;
-			  font-size: 0.6em;
-			  width: $width;
-			  margin-left: 25px;
-			  margin-top:-5px;
-			  color: white;
-			  transition: color 0.3s ease-in-out;
-			}
-			&:not([value=""]) {
-			  &::-webkit-input-placeholder {
-				font-size: 0.8em;
-				transform: translateY(-20px);
-				visibility: visible !important;
-				opacity: 1;
-			  }
-			  &:focus::-webkit-input-placeholder {
-				color: $base;
-			  }
-			  &:focus:not(:valid)::-webkit-input-placeholder {
-				color: $invalid;
-			  }
-			}
-			&:focus {
-			  background-position: 0 0;
-			  &:not(:valid):not([value=""]) {
-				border-bottom: solid 1px $invalid;
-				background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $invalid 4%);
-			  }
-			}
-			&:not(:focus):not(:valid):not([value=""]) {
-			  &::-webkit-input-placeholder {
-				color: $invalid;
-			  }
-			  border-bottom: solid 1px $invalid;
-			  background-position: 0 0 ;
-			  background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $invalid 4%);
-			  &~span.validation-text {
-				visibility: visible;
-				color: $invalid;
-			  }
-			}
-		  }
-		  
-		  .flex {
-			display: flex;
-			align-items: stretch;
-			textarea {
-			  line-height: 120%;
-			}
-		  }
-		  
-		  button {
-			font-family: 'roboto', sans-serif;
-			transition: transform 0.2s $cubic,
-			   box-shadow 0.2s $cubic;
-			border: none;
-			background: $base;
-			cursor: pointer;
-			border-radius: 3px;
-			padding: 6px;
-			width: $width;
-			color: white;
-			margin: 30px 0 0 25px;
-			box-shadow: 0 3px 6px 0 rgba(0,0,0,0.2);
-			&:hover { 
-			  transform: translateY(-2px);
-			  box-shadow: 0 5px 6px 0 rgba(0,0,0,0.2);
+				background-position: -400px 0;
 			}
 		  }
 	}	
-	}
 }
