blue color primary

--- a/scss/__variables.scss
+++ b/scss/__variables.scss
@@ -1,5 +1,6 @@
 //colors
-$color-primary: #9c00cc;
+$color-primary: #3464ac;
+// $color-primary: #9c00cc;
 // $color-primary: rgb(67, 164, 255);
 $color-white: white;
 $color-black: #293347;
