--- a/scss/__footer.scss
+++ b/scss/__footer.scss
@@ -3,6 +3,7 @@ footer{
 		display: flex;
 		padding: 10px 0px;
 		flex-wrap: wrap;
+		align-items: center;
 		justify-content: center;
 		h2{
 			text-transform: uppercase;
