--- a/scss/__portfolio.scss
+++ b/scss/__portfolio.scss
@@ -10,11 +10,12 @@
 	}
 }
 
-.portfolio{
+.portfolio {
 	display: flex;
 	flex-wrap: wrap;
 	text-align: center;
 	justify-content: center;
+	padding-bottom: 15px;
 }
 
 .website{
@@ -57,4 +58,51 @@
 			cursor: pointer;
 		}
 	}
+}
+
+.collapse {
+	top: 0;
+	bottom: 0;
+	right: 0;
+	width: 0;
+	z-index: 2;
+	padding: 0;
+	position: fixed;
+	overflow: hidden;
+	margin-top: 60px;
+	overflow-y: scroll;
+	background: white;
+	transition: all .5s;
+	box-shadow: 0px 0px 13px 0px $color-primary;
+
+	&__close {
+		top: 5px;
+		right: 10px;
+		cursor: pointer;
+		font-size: 25px;
+		font-weight: 700;
+		position: absolute;
+		color: $color-primary;
+	}
+
+	.card {
+		display: flex;
+		flex-direction: column;
+		&__header {
+			padding-top: 0;
+		}
+	
+		&__image {
+			width: 100%;
+			max-width: 500px;
+			margin: 20px auto;
+			border-radius: 10px;
+			border: 3px solid $color-black;
+		}
+	}
+}
+.collapse--open {
+	width: 1000px;
+	padding: 20px;
+	max-width: 100%;
 }
